--- a/tutorials/R_Markdown/Topological_Signatures.Rmd
+++ b/tutorials/R_Markdown/Topological_Signatures.Rmd
@@ -1,15 +1,61 @@
-# The purpose of this tutorial is to show how we can compute and compare topological signatures of graphs in R.
-# This is mostly performed through the 'TDA' library.
-# However, we provide the functionality to modify igraph objects to be compatible with this library.
-# We first import the necessary libraries.
+---
+title: "Topological_Signatures"
+author: "Robin Vandaele"
+output: html_document
+---
 
+<style type="text/css">
+
+body{ /* Normal  */
+      font-size: 12px;
+  }
+td {  /* Table  */
+  font-size: 8px;
+}
+h1.title {
+  font-size: 38px;
+  color: DarkRed;
+}
+h1 { /* Header 1 */
+  font-size: 28px;
+  color: DarkBlue;
+}
+h2 { /* Header 2 */
+    font-size: 22px;
+  color: DarkBlue;
+}
+h3 { /* Header 3 */
+  font-size: 18px;
+  font-family: "Times New Roman", Times, serif;
+  color: DarkBlue;
+}
+code.r{ /* Code block */
+    font-size: 12px;
+}
+pre { /* Code block - determines code spacing between lines */
+    font-size: 14px;
+}
+</style>
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+The purpose of this tutorial is to show how we can compute and compare topological signatures of graphs in R.
+This is mostly performed through the 'TDA' library.
+However, we provide the functionality to modify igraph objects to be compatible with this library.
+We first import the necessary libraries.
+
+```{r, warning=FALSE, message=FALSE}
 devtools::load_all() # load graphTDA
 library("ggplot2") # plotting
 library("ggpubr") # plotting in grid
+```
 
-# We define a list of shapes, that will make up the underlying models of the point cloud data sets we will compare.
-# These shapes will be metric trees, defined by a collection of segments between start and end points.
+We define a list of shapes, that will make up the underlying models of the point cloud data sets we will compare.
+These shapes will be metric trees, defined by a collection of segments between start and end points.
 
+```{r}
 Ishape <- list(list(start=c(-1, -1), end=c(0, 0)),
                list(start=c(0, 0), end=c(1,  1)))
 
@@ -30,14 +76,16 @@ Hshape <- list(list(start=c(-1/2, 0), end=c(0, 0)),
                list(start=c(1/2, 0), end=c(1, -1)))
 
 shapes <- list("I"=Ishape, "Y"=Yshape, "X"=Xshape, "H"=Hshape)
+```
 
-# By connecting the points defined above by continuous line segments, we obtain our continuous topological models.
-# However, all topological information, such as leaves and multifurcations, of these continuous models coincides with the analogs in their discrete graph counterparts.
-# Instead of connecting the points by a continuous segment in the plane, these graph counterparts are obtained by connecting them by an edge.
-# Furthermore, we will obtain the true topological signatures from the models through the normalized centralities of these graphs.
-# For a given graph, these can be obtained by the 'normalized_centrality' function.
-# We construct these discrete graph representations and their normalized centralities below.
+By connecting the points defined above by continuous line segments, we obtain our continuous topological models.
+However, all topological information, such as leaves and multifurcations, of these continuous models coincides with the analogs in their discrete graph counterparts.
+Instead of connecting the points by a continuous segment in the plane, these graph counterparts are obtained by connecting them by an edge.
+Furthermore, we will obtain the true topological signatures from the models through the normalized centralities of these graphs.
+For a given graph, these can be obtained by the 'normalized_centrality' function.
+We construct these discrete graph representations and their normalized centralities below.
 
+```{r}
 trueGraphs <- lapply(shapes, function(shape){
   # Construct discrete graph representation of the continuous model
   G <- t(sapply(shape, function(shape) do.call("c", shape)))
@@ -52,22 +100,26 @@ trueGraphs <- lapply(shapes, function(shape){
   G$NC <- normalized_centrality(G)
   return(G)
 })
+```
 
-# We can now look at a discrete graph representation and its normalized centralities for an example model.
-# Note that the following layout does not make use of the endpoints in the Euclidean plane defined above.
+We can now look at a discrete graph representation and its normalized centralities for an example model.
+Note that the following layout does not make use of the endpoints in the Euclidean plane defined above.
 
+```{r, fig.width=3, fig.height=3}
 example_shape <- "Y"
 set.seed(42)
 op <- par(mar = c(0, 0, 0.75, 0))
 plot(trueGraphs[[example_shape]], vertex.label=trueGraphs[[example_shape]]$NC,
      vertex.color=trueGraphs[[example_shape]]$NC, main="Normalized Centrality"); par(op)
+```
 
-# From these graphs we will compute the true topological signatures of the continuous models.
-# However, these graphs do not really illustrate their continuous counterparts well.
-# Hence, to illustrate these continuous models, we will sample points them without noise.
-# Note that this is yet again a discrete set of points.
-# Their normalized centralities in the true continuous model can be obtained by linear interpolation over the end nodes in the graphs.
+From these graphs we will compute the true topological signatures of the continuous models.
+However, these graphs do not really illustrate their continuous counterparts well.
+Hence, to illustrate these continuous models, we will sample points them without noise.
+Note that this is yet again a discrete set of points.
+Their normalized centralities in the true continuous model can be obtained by linear interpolation over the end nodes in the graphs.
 
+```{r}
 npoints <- 600 # points per model, exact number of points may slightly differ due to rounding
 cleanDataSets <- lapply(names(shapes), function(name){
   shape <- shapes[[name]]
@@ -86,7 +138,7 @@ cleanDataSets <- lapply(names(shapes), function(name){
     pointsOnBranchX <- t * branch$start[1] + (1 - t) * branch$end[1]
     pointsOnBranchY <- t * branch$start[2] + (1 - t) * branch$end[2]
 
-    # Calculate the true normalized centralities in the continuous model
+    # Calculate the true normalized centralities in the continuous model 
     # through linear interpolation using the discrete graph counterpart
     NC <- t * trueGraphs[[name]]$NC[paste(branch$start[1], branch$start[2])] +
       (1 - t) * trueGraphs[[name]]$NC[paste(branch$end[1], branch$end[2])]
@@ -97,9 +149,11 @@ cleanDataSets <- lapply(names(shapes), function(name){
   return(cleanData)
 })
 names(cleanDataSets) <- names(shapes)
+```
 
-# We can illustrate the continuous models (or more precisely samples from them) with their true normalized centralities below.
+We now illustrate the continuous models (or more precisely samples from them) with their true normalized centralities below.
 
+```{r, fig.width=7, fig.height=4}
 plotsOfCleanData <- lapply(names(cleanDataSets), function(name){
   ggplot(cleanDataSets[[name]], aes(x=x, y=y, col=NC)) +
     geom_point(size=2.5, col="black") +
@@ -112,29 +166,33 @@ plotsOfCleanData <- lapply(names(cleanDataSets), function(name){
     coord_fixed()
 })
 ggpubr::ggarrange(plotlist=plotsOfCleanData, nrow=2, ncol=2)
+```
 
-# The topological signatures obtained through the normalized centrality from these continuous models coincide with those obtained from their discrete graph counterparts.
-# Hence, to compute these true topological signatures, we can use the 'graph_persistence' function, as shown below.
-# trueDiagrams <- lapply(trueGraphs, function(G) graph_persistence(S=G, f=G$NC))
-#  names(trueDiagrams) <- names(shapes)
+The topological signatures obtained through the normalized centrality from these continuous models coincide with those obtained from their discrete graph counterparts.
+Hence, to compute these true topological signatures, we can use the 'graph_persistence' function, as shown below.
 
+```{r}
 trueDiagrams <- lapply(trueGraphs, function(G) graph_persistence(S=G, f=G$NC))
 names(trueDiagrams) <- names(shapes)
+```
 
-# Let's take a look at the obtained zero-dimensional persistence barcode for our previous example model.
-# Although the diagrams are more useful for mathematical comparisons, barcodes better visalize the presence of topological features with the same birth and death time.
-# In diagrams however, these points would be placed on top of each other (as will be below).
+Let's take a look at the obtained zero-dimensional persistence barcode for our previous example model.
+Although the diagrams are more useful for mathematical comparisons, barcodes better visalize the presence of topological features with the same birth and death time. 
+In diagrams however, these points would be placed on top of each other (as will be below).
 
+```{r, fig.width=6, fig.height=4}
 op <- par(mar = c(3.25, 3.25, 1, 1))
 TDA::plot.diagram(trueDiagrams[[example_shape]], main=paste(example_shape, "ground truth"),
                   barcode=TRUE); par(op)
+```
 
-# We observe that the number of persisting bars is consistent with how many leaves we have in our model.
-# This is because we computed sublevel persistence for the normalized centrality function.
-# As we can see from the discrete graph with normalized centralities above, leaves will be added and disconnected first, after which these born components will merge at multifurcations or the center of the tree.
-# In the rest of this tutorial, we will focus on how we can use this for topological comparison of empirical data.
-# For this, from each model, we sample three noisy data sets, by adding random noise and rotations, and centering to (0, 0).
+We observe that the number of persisting bars is consistent with how many leaves we have in our model.
+This is because we computed sublevel persistence for the normalized centrality function.
+As we can see from the discrete graph with normalized centralities above, leaves will be added and disconnected first, after which these born components will merge at multifurcations or the center of the tree. 
+In the rest of this tutorial, we will focus on how we can use this for topological comparison of empirical data.
+For this, from each model, we sample three noisy data sets, by adding random noise and rotations, and centering to (0, 0).
 
+```{r}
 nDistortions <- 3
 sigma <- 0.005
 
@@ -142,16 +200,18 @@ noisyDataSets <- lapply(cleanDataSets, function(cleanData){
   lapply(seq_len(nDistortions), function(distortionIdx){
     noise <- MASS::mvrnorm(nrow(cleanData), mu=c(0,0), Sigma=diag(2)*sigma)
     rotation <- mixAK::rRotationMatrix(1, 2)
-    noisyData <- data.frame(scale(t(apply(cleanData[,1:2], 1, function(row)
+    noisyData <- data.frame(scale(t(apply(cleanData[,1:2], 1, function(row) 
       rotation %*% row)) + noise, scale=FALSE))
     colnames(noisyData) <- colnames(cleanData)[1:2]
     return(noisyData)
   })
 })
 names(noisyDataSets) <- names(shapes)
+```
 
-# We can now visualize all noisy samples as follows.
+We can now visualize all noisy samples as follows.
 
+```{r, fig.width=7, fig.height=7}
 noisyLim <- c(min(unlist(noisyDataSets)), max(unlist(noisyDataSets)))
 plotsOfNoisyData <- lapply(1:length(noisyDataSets), function(idx1){
   lapply(1:length(noisyDataSets[[idx1]]), function(idx2){
@@ -163,11 +223,13 @@ plotsOfNoisyData <- lapply(1:length(noisyDataSets), function(idx1){
       coord_fixed()
   })
 })
-ggpubr::ggarrange(plotlist=do.call("c", plotsOfNoisyData), common.legend=TRUE,
-                  nrow=length(shapes), ncol=nDistortions)
+ggpubr::ggarrange(plotlist=do.call("c", plotsOfNoisyData), 
+                  common.legend=TRUE, nrow=length(shapes), ncol=nDistortions)
+```
 
-# From each noisy data set, we now construct a 10NN graph as well as the resulting normalized centralities
+From each noisy data set, we now construct a 5NN graph as well as the resulting normalized centralities
 
+```{r}
 kNNOfDataSets <- lapply(noisyDataSets, function(noisyDatasForShape){
   lapply(noisyDatasForShape, function(noisyData){
     G <- kNNgraph(noisyData[,1:2])
@@ -175,14 +237,16 @@ kNNOfDataSets <- lapply(noisyDataSets, function(noisyDatasForShape){
     return(G)
   })
 })
+```
 
-# As the edges of the kNN graphs may be difficult to visualize for smaller figure sizes, we first show one for a noisy sample of our previous example model.
+As the edges of the kNN graphs may be difficult to visualize for smaller figure sizes, we first show one for a noisy sample of our previous example model.
 
+```{r, fig.width=6, fig.height=5}
 example_edges <- get_edges2D(noisyDataSets[[example_shape]][[1]],
                              kNNOfDataSets[[example_shape]][[1]])
-ggplot(noisyDataSets[[example_shape]][[1]][names(V(kNNOfDataSets[[example_shape]][[1]])),],
+ggplot(noisyDataSets[[example_shape]][[1]][names(V(kNNOfDataSets[[example_shape]][[1]])),], 
        aes(x=x, y=y)) +
-  geom_segment(data=example_edges, aes(x=x1, y=y1, xend=x2, yend=y2), color="red", size=1) +
+  geom_segment(data=example_edges, aes(x=x1, y=y1, xend=x2, yend=y2), color="red", size=.5) +
   geom_point(size=.75, aes(col=kNNOfDataSets[[example_shape]][[1]]$NC), alpha=0.5) +
   ggtitle(paste(example_shape, "sample", 1)) +
   scale_colour_gradientn(colours=topo.colors(7)) +
@@ -192,15 +256,17 @@ ggplot(noisyDataSets[[example_shape]][[1]][names(V(kNNOfDataSets[[example_shape]
   theme_bw() +
   theme(plot.title=element_text(hjust = 0.5)) +
   coord_fixed()
+```
 
-# We can now plot all clean data as well as the kNNs with normalized centralities as follows.
-# The edges of the kNNs might not be visualized well this time due to smaller subfigure sizes.
+We can now plot all clean data as well as the kNNs with normalized centralities as follows.
+The edges of the kNNs might not be visualized well this time due to smaller subfigure sizes.
 
+```{r, fig.width=8, fig.height=8}
 plotsOfkNN <- lapply(1:length(noisyDataSets), function(idx1){
   lapply(1:length(noisyDataSets[[idx1]]), function(idx2){
     euclideanEdges <- get_edges2D(noisyDataSets[[idx1]][[idx2]], kNNOfDataSets[[idx1]][[idx2]])
     ggplot(noisyDataSets[[idx1]][[idx2]][names(V(kNNOfDataSets[[idx1]][[idx2]])),], aes(x=x, y=y)) +
-      geom_segment(data=euclideanEdges, aes(x=x1, y=y1, xend=x2, yend=y2), color="red", size=.5) +
+      geom_segment(data=euclideanEdges, aes(x=x1, y=y1, xend=x2, yend=y2), color="red", size=0.5) +
       geom_point(size=.35, aes(col=kNNOfDataSets[[idx1]][[idx2]]$NC)) +
       ggtitle(paste(names(noisyDataSets)[[idx1]], "sample", idx2)) +
       scale_colour_gradientn(colours=topo.colors(7)) +
@@ -215,24 +281,28 @@ plotsOfkNN <- lapply(1:length(noisyDataSets), function(idx1){
 ggpubr::ggarrange(plotlist=do.call("c", lapply(1:length(shapes), function(idx)
   c(list(plotsOfCleanData[[idx]]), plotsOfkNN[[idx]]))),
   common.legend=TRUE, nrow=length(shapes), ncol=nDistortions + 1)
+```
 
-# We now compute the topological signature, i.e., the zero-dimensional persistence diagram for the normalized centrality function, for each kNN.
+We now compute the topological signature, i.e., the zero-dimensional persistence diagram for the normalized centrality function, for each kNN.
 
+```{r}
 diagramsOfkNN <- list()
 progress <- 0
 for(idx1 in 1:length(kNNOfDataSets)){
   diagramsOfkNN[[idx1]] <- list()
   for(idx2 in 1:length(kNNOfDataSets[[idx1]])){
     print(paste0("progress: ", round(100 * progress / (length(kNNOfDataSets) * length(kNNOfDataSets[[1]])), 2), "%"))
-    G <- kNNOfDataSets[[idx1]][[idx2]]
-    diagramsOfkNN[[idx1]][[idx2]] <- graph_persistence(S=G, f=G$NC)
+    diagramsOfkNN[[idx1]][[idx2]] <- graph_persistence(S=kNNOfDataSets[[idx1]][[idx2]], 
+                                                       f=kNNOfDataSets[[idx1]][[idx2]]$NC)
     progress <- progress + 1
   }
   if(idx1==length(kNNOfDataSets)) print(paste0("progress: 100%"))
 }
+```
 
-# We can now plot all true and and empirical diagrams as follows.
+We can now plot all true and and empirical diagrams as follows.
 
+```{r, fig.width=8, fig.height=6}
 colors <- distinctColorPalette(length(noisyDataSets))
 op <- par(mfrow=c(length(noisyDataSets), length(noisyDataSets[[1]]) + 1), mar=c(3, 4, 2, 2))
 for(idx1 in 1:length(noisyDataSets)){
@@ -243,9 +313,11 @@ for(idx1 in 1:length(noisyDataSets)){
                       diagLim=c(0,1.1), col=colors[idx1])
   }
 }; par(op)
+```
 
-# To compare the different topological signatures, we compute the bottleneck distances between them.
+To compare the different topological signatures, we compute the bottleneck distances between them.
 
+```{r}
 pairwiseBottleNeckskNN <- matrix(numeric((length(noisyDataSets)*(length(noisyDataSets[[1]]) + 1))^2),
                                  nrow=length(noisyDataSets)*(length(noisyDataSets[[1]]) + 1))
 for(idx1 in 1:(nrow(pairwiseBottleNeckskNN) -  1)){
@@ -262,14 +334,16 @@ for(idx1 in 1:(nrow(pairwiseBottleNeckskNN) -  1)){
     pairwiseBottleNeckskNN[idx2, idx1] <- pairwiseBottleNeckskNN[idx1, idx2]
   }
 }
+```
 
-# We can now visualize the bottleneck distances through a heatmap of the matrix, as follows.
+We can now visualize the bottleneck distances through a heatmap of the matrix, as follows.
 
+```{r, fig.width=4, fig.height=3}
 ggplot(reshape2::melt(pairwiseBottleNeckskNN), aes(Var1, Var2, fill=value)) +
   geom_raster() +
-  scale_x_continuous(breaks=1 + seq(0, nrow(pairwiseBottleNeckskNN) - length(shapes),
+  scale_x_continuous(breaks=1 + seq(0, nrow(pairwiseBottleNeckskNN) - length(shapes), 
                                     length.out=length(shapes)), labels=names(shapes)) +
-  scale_y_continuous(breaks=1 + seq(0, nrow(pairwiseBottleNeckskNN) - length(shapes),
+  scale_y_continuous(breaks=1 + seq(0, nrow(pairwiseBottleNeckskNN) - length(shapes), 
                                     length.out=length(shapes)),
                      trans="reverse", labels=names(shapes)) +
   xlab("") +
@@ -278,19 +352,24 @@ ggplot(reshape2::melt(pairwiseBottleNeckskNN), aes(Var1, Var2, fill=value)) +
   theme_bw() +
   theme(plot.title=element_text(hjust=0.5), text=element_text(size=15)) +
   coord_fixed()
+```
 
-# Finally, we can also chart the data sets through a MDS plot of this distance matrix.
-# This can be seen as a placement of data sets in the plane that separates them according to their topological (dis)similarity.
-# We will also mark the true models/topological signatures by black borders.
+Finally, we can also chart the data sets through a MDS plot of this distance matrix.
+This can be seen as a placement of data sets in the plane that separates them according to their topological (dis)similarity.
+We will also mark the true models/topological signatures by black borders.
 
+```{r, fig.width=4, fig.height=3.5}
 fitBottleNeckskNN <- data.frame(cmdscale(pairwiseBottleNeckskNN, k=2))
 fitBottleNeckskNN[,3] <- rep(names(noisyDataSets), each=length(noisyDataSets[[1]]) + 1)
 colnames(fitBottleNeckskNN) <- c("x", "y", "shape")
 ggplot(fitBottleNeckskNN, aes(x=x, y=y, col=shape)) +
   geom_point(size=4.5, col="white") +
   geom_point(size=4) +
-  geom_point(data=fitBottleNeckskNN[1 + seq(0, nrow(fitBottleNeckskNN) - length(shapes), length.out=length(shapes)),], size=5, col="black") +
-  geom_point(data=fitBottleNeckskNN[1 + seq(0, nrow(fitBottleNeckskNN) - length(shapes), length.out=length(shapes)),], size=4) +
+  geom_point(data=fitBottleNeckskNN[1 + seq(0, nrow(fitBottleNeckskNN) - length(shapes),
+                                            length.out=length(shapes)),], size=5, col="black") +
+  geom_point(data=fitBottleNeckskNN[1 + seq(0, nrow(fitBottleNeckskNN) - length(shapes),
+                                            length.out=length(shapes)),], size=4) +
   scale_color_manual(values=colors[order(names(noisyDataSets))]) +
   theme_bw() +
   coord_fixed()
+```
